@@ -11,7 +11,8 @@ this is the same as the life cycle of a bug in any Bugzilla project. The Bugzill
 <a href="http://bugzilla.opendarwin.org/page.cgi?id=fields.html#status">more details</a> about
 the life cycle of Bugzilla bugs.<p>
 
-<p>Joost de Valk (AlthA on the <a href="../contact.html">#webkit IRC channel</a>) has volunteered to answer questions
+<p>Joost de Valk (AlthA on the <a href="../contact.html">#webkit IRC channel</a>, homepage at 
+<a href="http://www.joostdevalk.nl/">www.joostdevalk.nl</a>) has volunteered to answer questions
 about the WebKit bug life cycle. You can reach him on IRC or via email at webkit at joostdevalk dot nl.
 
 <h3>Fresh, Unconfirmed Bugs</h3>
